--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
                         <a class="btn btn-outline-success btn-mobfull disabled" style="pointer-events: none;" href="#" role="button">Dashboard</a>
                   </span> -->
                     <!--<a class="btn btn-outline-zenpai btn-mobfull" href="/dashboard" role="button">Dashboard <span class="beta">BETA</span></a>-->
-                    <a class="btn btn-outline-warning btn-mobfull disabled" href="https://discordservers.me/"
+                    <a class="btn btn-outline-warning btn-mobfull disabled" href="#"
                         role="button" style="cursor:not-allowed;pointer-events:all;">Projects</a>
                     <p class="lead zp-topmarg">
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/JavKing/home.html"
