disabled project btn

--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@
                   </span> -->
                     <!--<a class="btn btn-outline-zenpai btn-mobfull" href="/dashboard" role="button">Dashboard <span class="beta">BETA</span></a>-->
                     <a class="btn btn-outline-warning btn-mobfull disabled" href="#"
-                        role="button" style="cursor:not-allowed;pointer-events:all;">Projects</a>
+                        role="button" style="cursor:not-allowed;pointer-events:all;" tabindex="-1">Projects</a>
                     <p class="lead zp-topmarg">
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/JavKing/home.html"
                             role="button" target="_blank">JavKing</a>
