--- a/home.html
+++ b/home.html
@@ -109,8 +109,9 @@
                             <img src="https://discordbots.org/api/widget/servers/375750637540868107.svg" alt="">
                         </a> -->
                     </h1>
-                    <h3 class="text-center text-md-left"><span class="text-uppercase">cs student - </span><span
-                            id="morphtext" class="morphext"><span class="animated fadeIn">JS</span></span></h3>
+                    <h3 class="text-center text-md-left">
+                        { <span id="morphtext" class="morphext"><span class="animated fadeIn">JavaScript</span></span> }
+                    </h3>
                     <!-- <p class="lead">
                         Kyoko is a open-source, easy to use and powerful Discord bot which contains a lot of features
                         you probably need such as an intuitive dashboard, customizable profiles, and leveling, currency
@@ -123,7 +124,7 @@
                                 What I do:
                             </p>
                             <p class="lead">
-                                Code, Game, Sleep, Repeat
+                                🔢 Code, Game, Sleep, Repeat
                             </p>
                         </div>
                         <div>
@@ -131,9 +132,10 @@
                                 Who I am:
                             </p>
                             <p class="lead list">
-                                Current Freshman at Cal Poly Pomona
+                                📍️Current Freshman at Cal Poly Pomona
                             </p>
                             <p class="lead">
+                                <img class="emoji" src="https://cdn.discordapp.com/emojis/817688360884895774.png?v=1" />
                                 Lazy Programmer
                             </p>
                         </div>
@@ -165,8 +167,8 @@
                         <a class="btn btn-outline-success btn-mobfull disabled" style="pointer-events: none;" href="#" role="button">Dashboard</a>
                   </span> -->
                     <!--<a class="btn btn-outline-zenpai btn-mobfull" href="/dashboard" role="button">Dashboard <span class="beta">BETA</span></a>-->
-                    <a class="btn btn-outline-warning btn-mobfull disabled" href="#"
-                        role="button" style="cursor:not-allowed;pointer-events:all;" tabindex="-1">Projects</a>
+                    <a class="btn btn-outline-warning btn-mobfull disabled" href="#" role="button"
+                        style="cursor:not-allowed;pointer-events:all;" tabindex="-1">Projects</a>
                     <p class="lead zp-topmarg">
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/JavKing/home.html"
                             role="button" target="_blank">JavKing</a>
@@ -252,10 +254,10 @@
     <script type="text/javascript">
         twemoji.parse(document.body);
         var jQuery_3_2_1 = $.noConflict(true);
-        jQuery_3_2_1("#morphtext").text("JS, Py").Morphext({
+        jQuery_3_2_1("#morphtext").text("JavaScript, Python, Java").Morphext({
             animation: "fadeIn",
             separator: ",",
-            speed: 3000,
+            speed: 2500,
         });
     </script>
     <script onload="window._theme()" src="js/blue.js"></script>
