change moment.min.js loc

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- Moment -->
-    <script src="/js/moment.min.js"></script>
+    <!-- <script src="/js/moment.min.js"></script> -->
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
