--- a/projects/Clock/home.html
+++ b/projects/Clock/home.html
@@ -10,7 +10,7 @@
     <title>Clock</title>
 
     <script src="./js/time.js"></script>
-    <script src="/js/moment.min.js"></script>
+    <script src="./js/moment.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
