--- a/projects/Redeem/home.html
+++ b/projects/Redeem/home.html
@@ -33,11 +33,12 @@
                 <div>
                 <button class="btn">
                     <img src="https://m.media-amazon.com/images/I/41ATA2Pr7EL._SS142_.jpg" height="250px">
-                    <p>eGirl Mousepad</p>
+                    <p>Sakura Deskpad</p>
                 </button>
                 </div>
                 <div class="popup">
-                    <h2>Look up ❤️</h2>
+                    <img src="videos/bleh.png" style="width:100%">
+                    <h2>Sike.</h2>
                     <b class="close">x</b>
                 </div>
             </section>
