--- a/projects/Redeem/home.html
+++ b/projects/Redeem/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="screen">
         <div class="video-container">
             <div class="center">
                 <video id="video" autoplay muted>
@@ -30,6 +30,7 @@
             <section>
                 <h2>Select the prize you want to redeem!</h2>
                 <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+                <br></br><br></br><br></br><br></br>
                 <div>
                 <button class="btn">
                     <img src="https://m.media-amazon.com/images/I/41ATA2Pr7EL._SS142_.jpg" height="250px">
