--- a/projects/Redeem/home.html
+++ b/projects/Redeem/home.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <audio autoplay loop id="audio" src="./videos/song.mp3"></audio>
     <div class="container" id="screen">
         <div class="video-container">
             <div class="center">
@@ -88,6 +89,10 @@
             player.load();
             player.play();
         }
+
+        // window.onload = function() {
+        //     document.getElementById("audio").play();
+        // }
 
         // var first = "kaguya", second = "elsa";
 
