prepare for mouse hover event on canvas

--- a/home.html
+++ b/home.html
@@ -98,7 +98,6 @@
             </div>
         </div>
     </div> -->
-
     <div class="d-flex h-100 mx-auto flex-column">
         <header class="masthead mb-auto"></header>
         <main class="inner cover">
@@ -223,10 +222,6 @@
                 lineDrawing();
             }, 500);
         });
-    </script>
-    <script src="/js/anime.min.js"></script>
-    <script src="/js/script.js"></script>
-    <script>
         const svgPaths = document.querySelectorAll('.line-drawing .lines path');
         var lineDrawing = function () {
             anime({
@@ -240,6 +235,8 @@
             });
         };
     </script>
+    <script src="/js/anime.min.js"></script>
+    <script src="/js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -251,6 +248,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Morphext/2.4.4/morphext.min.js"></script>
     <script src="https://twemoji.maxcdn.com/2/twemoji.min.js?11.0"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-particles"></script> -->
     <script type="text/javascript">
         twemoji.parse(document.body);
         var jQuery_3_2_1 = $.noConflict(true);
