--- a/home.html
+++ b/home.html
@@ -100,15 +100,15 @@
     </div> -->
     <div class="d-flex h-100 mx-auto flex-column">
         <header class="masthead mb-auto"></header>
-        <main class="inner cover">
+        <main class="inner cover px-md-3 px-lg-0">
             <div class="row">
-                <div class="col-lg-5 col-sm-12 offset-md-2 align-self-center order-2 order-lg-1">
-                    <h1 class="zp-big text-center text-md-left">Zenpai
+                <div class="col-lg-5 col-md-12 col-sm-12 offset-lg-2 align-self-center order-2 order-lg-1">
+                    <h1 class="zp-big text-center text-lg-left mx-md-auto">Zenpai
                         <!-- <a href="https://discordbots.org/bot/375750637540868107">
                             <img src="https://discordbots.org/api/widget/servers/375750637540868107.svg" alt="">
                         </a> -->
                     </h1>
-                    <h3 class="text-center text-md-left">
+                    <h3 class="text-center text-lg-left mx-md-auto">
                         { <span id="morphtext" class="morphext"><span class="animated fadeIn">JavaScript</span></span> }
                     </h3>
                     <!-- <p class="lead">
@@ -117,7 +117,7 @@
                         system, moderation, auto-roles or advanced music player with cool features such as module
                         player, nightcore or karaoke mode.
                     </p> -->
-                    <div class="items">
+                    <div class="items col-md-auto px-lg-0">
                         <div>
                             <p class="lead header">
                                 What I do:
@@ -186,8 +186,8 @@
                         </span> -->
                     </p>
                 </div>
-                <div class="col-lg-3 col-sm-12 align-self-center order-1 order-lg-2">
-                    <img class="w-100 p-3 rounded-circle" src="images/profile.png" alt="v3 avatar is muuuch cuter OwO">
+                <div class="col-lg-3 col-md-6 col-sm-12 align-self-center order-1 order-lg-2 mx-md-auto mx-lg-0">
+                    <img class="w-100 p-3 rounded-circle" src="images/profile.png" alt="">
                 </div>
             </div>
         </main>
