--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -85,10 +85,11 @@
         <ul class="menu active">
             <!-- <li class="logo"><a href="/home.html" onclick="delayUrlLoad('/home.html', 1.5); return false;"><img
                         src="../../images/profile.png"></a></li> -->
-            <li class="item"><a href="#" tabindex="1">Home page</a></li>
+            <!-- <li class="item"><a href="#" tabindex="1">Home</a></li> -->
             <li class="item"><a href="#" tabindex="1">Commands</a></li>
             <li class="item"><a href="https://discord.gg/EXQn6bcqGv" tabindex="1">Community</a></li>
-            <li class="item last-item"><a href="/home.html" tabindex="1">Developer</a></li>
+            <li class="item"><a href="./src/players/dashboard.html">Dashboard</a></li>
+            <!-- <li class="item last-item"><a href="/home.html" tabindex="1">Developer</a></li> -->
             <!-- <li class="item has-submenu">
                 <a tabindex="0">Contact</a>
                 <ul class="submenu">
