--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 
     <meta property="og:title" content="Zenpai.herokuapp.com">
     <meta property="og:description" content="Zenpai's Official Website.">
-    <meta property="og:image" content="./images/profile.png">
+    <meta property="og:image" content="/images/profile.png">
     <meta property="og:type" content="article">
 
 </head>
@@ -103,12 +103,12 @@
         <main class="inner cover px-md-3 px-lg-0">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 offset-lg-2 align-self-center order-2 order-lg-1">
-                    <h1 class="zp-big text-center text-lg-left mx-md-auto">Zenpai
+                    <h1 class="zp-big text-center text-lg-left">Zenpai
                         <!-- <a href="https://discordbots.org/bot/375750637540868107">
                             <img src="https://discordbots.org/api/widget/servers/375750637540868107.svg" alt="">
                         </a> -->
                     </h1>
-                    <h3 class="text-center text-lg-left mx-md-auto">
+                    <h3 class="text-center text-lg-left">
                         { <span id="morphtext" class="morphext"><span class="animated fadeIn">JavaScript</span></span> }
                     </h3>
                     <!-- <p class="lead">
