rename script file test

--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -53,7 +53,7 @@
     <meta property="og:image" content="../../images/JavKing_new_FINISHED.png">
     <meta property="og:type" content="article">
 
-    <script src="./js/script.js"></script>
+    <script src="./js/jscript.js"></script>
 
 </head>
 
