--- a/projects/JavKing/src/players/dashboard.html
+++ b/projects/JavKing/src/players/dashboard.html
@@ -10,8 +10,8 @@
     <link href="./css/styles.css" rel="stylesheet" type="text/css">
 
     <script src="./js/script.js"></script>
-    <script src="./js/library.js"></script>
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/library.js"></script>
+    <script src="./js/app.js"></script> -->
 
     <script src="/js/canvas.js"></script>
 </head>
