remove unnecessary id

--- a/projects/JavKing/src/players/dashboard.html
+++ b/projects/JavKing/src/players/dashboard.html
@@ -30,7 +30,7 @@
     <div class="manage-guild-page">
         <header class="header header-theme">
             <div class="logo-wrapper">
-                <a id="logo-link" class="logo-link" href="../../home.html">
+                <a class="logo-link" href="../../home.html">
                     <span class="font-default-logo logo-title">JavKing</span>
                 </a>
             </div>
