officialize title name

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
     <!-- Page info -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Zenpai</title>
+    <title>Simon Ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Zenpai's official website.">
     <meta name="keywords" content="zenpai developer bot discord">
@@ -103,7 +103,7 @@
         <main class="inner cover px-md-3 px-lg-0">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 offset-lg-2 align-self-center order-2 order-lg-1">
-                    <h1 class="zp-big text-center text-lg-left">Zenpai
+                    <h1 class="zp-big text-center text-lg-left">Simon Ly
                         <!-- <a href="https://discordbots.org/bot/375750637540868107">
                             <img src="https://discordbots.org/api/widget/servers/375750637540868107.svg" alt="">
                         </a> -->
