--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
                                 Who I am:
                             </p>
                             <p class="lead list">
-                                📍️Current Freshman at Cal Poly Pomona
+                                📍️Current Junior at Cal Poly Pomona
                             </p>
                             <p class="lead">
                                 <img class="emoji" src="https://cdn.discordapp.com/emojis/817688360884895774.png?v=1" />
